--- a/ureport/templates/ureport/partials/viz/histogram.html
+++ b/ureport/templates/ureport/partials/viz/histogram.html
@@ -4,6 +4,8 @@
 </div>
 <script src="{{MEDIA_URL}}ureport/javascripts/highcharts.js" type="text/javascript"></script>
 <script language="javascript">
+     $(document).ready(function() {
     load_histogram('{{ poll.pk }}', 'bar_{{ poll.pk }}', '{% url poll.views.number_details poll.pk %}');
+     });
 </script>
 
