--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -65,7 +65,7 @@
                 </p>
             </div>
             <div class="join">
-                <img src="{{ MEDIA_URL }}ureport/images/join_us.png"/>
+                <a href="/signup"> <img src="{{ MEDIA_URL }}ureport/images/join_us.png"/></a>
             </div>
                 {% if quote %}
                     <div class="quotebox">
