--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -111,6 +111,7 @@
 	                   <li><a href="{% url messagelog %}">MESSAGE LOG</a></li>
 	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
 	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
+                        <li><a href="{% url classifier %}">MESSAGE CLASSIFICATION</a></li>
 	                {% else %}
 	                   <li><a href="/accounts/login">LOGIN</a></li>
 	                {% endif %}
