--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -39,6 +39,7 @@
             {% load humanize %}
             <span id="span_info"><span id="span_total">{{ total_ureporters|intcomma }}</span> members to date</span>
         </div>
+        <div id="flash_container"></div>
         <div class="content">
             {% block content %}
                 <!--  MAIN CONTENT GOES HERE -->
