--- a/ureport/templates/ureport/polls/view_poll.html
+++ b/ureport/templates/ureport/polls/view_poll.html
@@ -138,6 +138,8 @@ click on question to edit
 
 <form action="">
 {% csrf_token %}
+    <span>crappp</span>crappp
+
 <table width="100%" class="results">
 <thead>
 <tr>
