--- a/ureport/templates/ureport/polls/alerts.html
+++ b/ureport/templates/ureport/polls/alerts.html
@@ -225,7 +225,7 @@
         <h2>
             Messages
         </h2>
-        <a href="./?capture=toggle" onclick="c=$(this).attr('href')+"&time="+"new Date().getTime();$(this).attr('href',c);" id="status" class="btn" data-remote=true>
+        <a href="./?capture=toggle" onclick="c=$(this).attr('href')+'&time='+new Date().getTime();$(this).attr('href',c);" id="status" class="btn" data-remote=true>
     <span id="capty">
         {%if capture_status.value == 'true'%}
         Stop Capture
