--- a/ureport/templates/ureport/partials/forward.html
+++ b/ureport/templates/ureport/partials/forward.html
@@ -1,4 +1,4 @@
-<form method="post" id="message_form" action="/sendmessage/" data-remote=true>
+<form method="post" id="message_forward" action="/sendmessage/?forward=true" data-remote=true>
     <div class="modal-header">
         <a class="close" data-dismiss="modal" onclick='$(".modal").hide()'>×</a>
 
