--- a/ureport/templates/ureport/polls/alerts.html
+++ b/ureport/templates/ureport/polls/alerts.html
@@ -3,6 +3,7 @@
 <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/ureport_extras.css"/>
 <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/ureport.min.css"/>
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/modal.css"/>
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}generic/stylesheets/jquery-ui-1.7.3.custom.css"/>
 
 <style>
     .star-rating {
@@ -127,6 +128,7 @@
 
 
 <script src="{{MEDIA_URL}}ureport/javascripts/mp_dashboard.js" type="text/javascript"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery-ui.js"></script>
         {%endblock%}
 
         {%block top_js%}
@@ -144,10 +146,7 @@
                     else {
                         d = eval(data);
                         $.each(d, function (k, v) {
-
-                                    foo = "<tr><td>" + v.text + "</td><td>" + v.date + "</td><td>" + v.name + "</td><td>" + v.number + "</td><td>" + v.district + "</td><td>" + v.actions + "</td><td>" + v.rating+"</td></tr>";
-
-                                    $("#mp_bd").prepend(foo);
+                                    $("#mp_bd").prepend(v.row);
 
 
                                 }
@@ -176,6 +175,10 @@
                     });
         });
 
+        $("#id_startdate").datepicker({ dateFormat: 'dd/mm/yy' ,changeYear: true ,changeMonth: true,minDate: new Date(2009, 1 - 1, 1) });
+        $("#id_enddate").datepicker({ dateFormat: 'dd/mm/yy' ,changeYear: true ,changeMonth: true,minDate: new Date(2009, 1 - 1, 1) });
+
+
         $('#status').bind('ajax:before',function (exhr, status, error) {
             ajax_loading('#status');
 
@@ -184,6 +187,23 @@
             $('#capty').html(xhr.responseText);
                     $('.ajax_loading').remove();
         });
+
+        $('#remove_form').bind('ajax:before',function (exhr, status, error) {
+            ajax_loading('#remove');
+
+        }).bind('ajax:success', function (evt, data, status, xhr) {
+
+
+                    $('.ajax_loading').remove();
+                    var $form = $(this);
+
+                    // Reset fields and any validation errors, so form can be used again, but leave hidden_field values intact.
+                    $form.find('textarea,input[type="text"],input[type="file"]').val("");
+                    $('#mesg_title').html("Success:)");
+                    $('#mesg_body').html("Messages successfully removed from alerts ");
+                    $('#mesg_st').show();
+
+                });
 
         $('#message_reply').bind('ajax:success', function (evt, data, status, xhr) {
             console.log("rrrr");
@@ -245,6 +265,8 @@
     }
 
 
+
+
 </script>
 
 {% endblock %}
@@ -269,6 +291,16 @@
         </a>
 
         <span><a class="btn" href="?download=true" >Download</a></span>
+
+        <span><a  onclick="$('#remove').toggle();" href="javascript:void(0);" >Remove Captured >></a> </span>
+        <div id="remove" style="display:none;">
+            <form data-remote=true method="post" id="remove_form" action="/remove_captured/">
+<table>
+        {{range_form.as_table}}
+<tr><td><input type="submit" value="remove from alerts" class="btn" ></td></tr>
+</table>
+            </form>
+        </div>
 
         <table class="zebra-striped bordered fc" width="100%">
             <thead>
