fix response message

--- a/ureport/templates/ureport/polls/alerts.html
+++ b/ureport/templates/ureport/polls/alerts.html
@@ -200,7 +200,7 @@
                     // Reset fields and any validation errors, so form can be used again, but leave hidden_field values intact.
                     $form.find('textarea,input[type="text"],input[type="file"]').val("");
                     $('#mesg_title').html("Success:)");
-                    $('#mesg_body').html("Messages successfully removed from alerts ");
+                    $('#mesg_body').html("Messages successfully removed from alerts .Please Refresh page. ");
                     $('#mesg_st').show();
 
                 });
