--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -56,6 +56,7 @@
 	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
                          <li><a href="{% url mp_dashboard %}">MP BARAZA</a></li>
                         <li><a href="{% url classifier %}">MESSAGE CLASSIFICATION</a></li>
+                        <li><a href="{% url alerts %}">Real Time</a></li>
 	                {% else %}
 	                   <li><a href="/accounts/login">LOGIN</a></li>
 	                {% endif %}
@@ -92,6 +93,7 @@
 	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
                         <li><a href="{% url mp_dashboard %}">MP BARAZA</a></li>
                          <li><a href="{% url classifier %}">MESSAGE CLASSIFICATION</a></li>
+                    <li><a href="{% url alerts %}">Real Time</a></li>
 	                {% else %}
 	                   <li><a href="/accounts/login">LOGIN</a></li>
 	                {% endif %}
