fix nasty typo :::

--- a/ureport/templates/ureport/ureporters_base.html
+++ b/ureport/templates/ureport/ureporters_base.html
@@ -55,7 +55,7 @@
 
 <tr><td>English SMS:</td><td>{{action_forms.0.1.text}}</td><td>Select Group(s):</td><td>{{action_forms.1.1.groups}}</td></tr>
 
- <tr><td>Luo SMS:</td><td>{{action_forms.0.1.text}}</td><td></td><td><a class="{{ action_forms.1.1.action_class }} btn-primary btn btn-large" href="javascript:void(0)" onclick="action(this, '{{ action_forms.1.0 }}',{{ page }})">Assign Group </a></td></tr>
+ <tr><td>Luo SMS:</td><td>{{action_forms.0.1.text_luo}}</td><td></td><td><a class="{{ action_forms.1.1.action_class }} btn-primary btn btn-large" href="javascript:void(0)" onclick="action(this, '{{ action_forms.1.0 }}',{{ page }})">Assign Group </a></td></tr>
   <tr><td><a class="{{ action_forms.0.1.action_class }} btn-primary btn btn-large" href="javascript:void(0)" onclick="action(this, '{{ action_forms.0.0 }}',{{ page }})">Send Message </a></td><td></td><td></td><td><a class="{{ action_forms.2.1.action_class }} btn-primary btn btn-large" href="javascript:void(0)" onclick="action(this, '{{ action_forms.2.0 }}',{{ page }})">Blacklist Selected </a></td></tr>
 
 
