--- a/ureport/templates/ureport/responses_base.html
+++ b/ureport/templates/ureport/responses_base.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/modules.css" />
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}rapidsms/stylesheets/icons.css" />
      <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/style.css" />
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/modal.css"/>
 {% endblock %}
 {% block extra_js %}
     <script src="{{MEDIA_URL}}ureport/javascripts/jquery-ui.js" type="text/javascript"></script>
