--- a/ureport/templates/registration/password_reset_email.html
+++ b/ureport/templates/registration/password_reset_email.html
@@ -8,7 +8,7 @@ Please go to the following page and choose a new password:
 
 Your username, in case you've forgotten: {{ user.username }}
 
-Thanks for using our site!
+Thanks for reporting like a boss :)
 
 The {{ site_name }} team.
 
