new poll creation dashboard

--- a/ureport/static/stylesheets/base.css
+++ b/ureport/static/stylesheets/base.css
@@ -827,4 +827,5 @@ fieldset{
     background-image:url("../images/ajax-loader.gif");
     background-repeat:no-repeat;
     background-position: center center;
+    z-index: 999999;
 }
