--- a/ureport/templates/ureport/partials/polls/poll_admin_row.html
+++ b/ureport/templates/ureport/partials/polls/poll_admin_row.html
@@ -17,7 +17,7 @@
                 <img src="{{ MEDIA_URL }}poll/icons/silk/database_table.png" alt=""/> Responses ({{ object.responses__count }})
             </a>
         {% endif %}
-        <a href="{% url poll.views.view_poll object.pk %}">
+        <a href="{% url ureport.views.view_poll object.pk %}">
             <img src="{{ MEDIA_URL }}poll/icons/silk/bullet_wrench.png" alt=""/> Edit
         </a>
     </div>
